<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".MyProfile">


    <ImageView
        android:id="@+id/userProfilePic"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:contentDescription="@string/profile_picture"
        android:elevation="4dp"
        android:paddingLeft="14dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingRight="14dp"
        android:paddingBottom="24dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:ems="28"
        android:paddingTop="24dp"
        android:paddingBottom="12dp"
        android:text="@string/userName"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfilePic" />

    <View
        style="@style/Divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"  />

    <TextView
        android:id="@+id/track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="8dp"
        android:text="@string/track"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="8dp"
        android:text="@string/country"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="8dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country"/>

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="8dp"
        android:text="@string/phoneNumber"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <TextView
        android:id="@+id/slackUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingTop="8dp"
        android:paddingEnd="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="8dp"
        android:text="@string/slackUserName"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"/>

</android.support.constraint.ConstraintLayout>